--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '3.8'
-
 services:
   postgres:
-    image: postgres:15
+    image: postgres:14
     container_name: postgres-db
     restart: unless-stopped
     environment:
@@ -14,30 +12,33 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  mongodb:
-    image: mongo:6.0
-    container_name: mongo-db
+  redis:
+    image: redis:7.2-alpine
+    container_name: redis-cache
     restart: unless-stopped
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: mongouser
-      MONGO_INITDB_ROOT_PASSWORD: mongopassword
     ports:
-      - "27017:27017"
+      - "6379:6379"
     volumes:
-      - mongo_data:/data/db
+      - redis_data:/data
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.13.0
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
-      - xpack.security.enabled=false # Vô hiệu hóa security để dễ kết nối từ NestJS
+      - xpack.security.enabled=false
+      - xpack.security.transport.ssl.enabled=false
       - ES_JAVA_OPTS=-Xms512m -Xmx512m
     ports:
       - "9200:9200"
     volumes:
       - es_data:/usr/share/elasticsearch/data
     restart: unless-stopped
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    mem_limit: 1g
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.13.0
@@ -50,7 +51,36 @@ services:
       - elasticsearch
     restart: unless-stopped
 
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    restart: unless-stopped
+    ports:
+      - "5672:5672"     # AMQP protocol
+      - "15672:15672"   # Web UI
+    environment:
+      RABBITMQ_DEFAULT_USER: rabbituser
+      RABBITMQ_DEFAULT_PASS: rabbitpassword
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+
+  runtime:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: runtime
+    container_name: nestjs-runtime
+    ports:
+      - "3000:3000"
+    depends_on:
+      - postgres
+      - redis
+      - elasticsearch
+      - rabbitmq
+
+      
 volumes:
   postgres_data:
-  mongo_data:
+  redis_data:
   es_data:
+  rabbitmq_data:
