--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-01",
+  "name": "backend-service",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -32,8 +32,10 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^11.1.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@supabase/supabase-js": "^2.49.6",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.8",
     "bcrypt": "^5.1.1",
@@ -44,6 +46,7 @@
     "dotenv": "^16.5.0",
     "file-type": "^16.5.4",
     "firebase-admin": "^13.3.0",
+    "ioredis": "^5.6.1",
     "mysql2": "^3.14.0",
     "pg": "^8.14.1",
     "redis": "^4.7.1",
