--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,12 +71,14 @@ services:
       target: runtime
     container_name: nestjs-runtime
     ports:
-      - "3000:3000"
+      - "3001:3001"
     depends_on:
       - postgres
       - redis
       - elasticsearch
       - rabbitmq
+    environment:
+      NODE_ENV: production
 
       
 volumes:
